terraform/ec2.tf
resource "aws_instance" "bastion" {
  ami                         = var.ami_id
  instance_type               = "t2.micro"
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.bastion.id]
  associate_public_ip_address = true
  key_name                    = var.key_pair_name

  iam_instance_profile = aws_iam_instance_profile.ec2_profile.name

  tags = merge(local.common_tags, {
    Name = "bastion-host"
  })
}
